# quiverlab

./: .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  paper.yml  qpa.yml  release.yml
docs/: index.md
docs/development/: release.md
docs/gui/: gui.css  gui.js  runner.py  worker.js
docs/internals/: 01-exact-fields.md  02-quivers-relations.md  03-algebra.md  04-hochschild-bar.md  05-resolutions.md  06-invariants.md  07-dispatch.md  08-chouhy-solotar.md  08-groebner.md  09-chouhy-solotar.md  09-modules.md  10-modules.md  11-families-citations.md  12-viz-trace.md  README.md
docs/javascripts/: mathjax.js
docs/plans/: 2026-07-12-plan-01-foundations.md  2026-07-12-plan-02-hanlab-port.md  2026-07-18-plan-03-groebner.md  2026-07-18-plan-04-chouhy-solotar.md  2026-07-18-plan-05-modules.md  2026-07-18-plan-06-families.md  2026-07-18-plan-07-viztrace.md  2026-07-18-plan-08-release.md  2026-07-18-plan-09-web.md  2026-07-21-plan-10-gui-landing.md  2026-07-22-plan-11-eta.md  2026-07-22-plan-12-ambiguity-blocks.md  2026-07-22-plan-13-minimal-multivertex.md  2026-07-23-plan-14-cs-operations.md  2026-07-23-plan-15-deepen-corner-checkpoint.md  2026-07-23-plan-16-minimal-cohomology.md  2026-07-23-plan-17-cs-canonicalization.md  DEEPER-ENGINES-BACKLOG.md  ROADMAP.md
docs/specs/: 2026-07-12-quiverlab-design.md  2026-07-18-quiverlab-web-design.md  2026-07-21-quiverlab-gui-landing-design.md  2026-07-22-quiverlab-gui-eta-design.md
docs/tutorials/: 01-exact-fields.ipynb  02-quivers-and-algebras.ipynb  03-hochschild.ipynb  README.md
paper/: paper.md
scripts/: check_pypi_name.py  fit_eta_model.py  gen_bibliography.py  gen_ref_pages.py  gui_build_hook.py  release_freshness.py
src/quiverlab/: __init__.py  errors.py
tests/: conftest.py  test_errors.py  test_no_floats.py  test_quickstart.py
tests/batch/: test_batch_db.py  test_batch_labdb_port.py  test_open_zoo_broaden.py  test_periodic_symmetric_family.py
tests/citations/: test_bibliography.py  test_registry.py  test_result_references.py
tests/combinat/: test_quiver.py  test_relation_exact_coeffs.py  test_relations.py
tests/core/: test_algebra.py  test_monomial.py  test_repr_polish.py
tests/engine/: test_acceptance_plan02.py  test_adapter_dispatch.py  test_automorphism.py  test_bardzell_resolution.py  test_bardzell_straddle.py  test_basis_transport.py  test_bimodule_coefficients.py  test_cohomology_fast_rank.py  test_complexity.py  test_coxeter_spectrum.py  test_cyclic_homology.py  test_deepen.py  test_deepen_corner.py  test_dynkin_zoo.py  test_engine_validation.py  test_error_paths.py  test_gerstenhaber.py  test_kernels.py  test_linalg_fast.py  test_linalg_modp.py  test_minimal_cohomology.py  test_minimal_memory_guard.py  test_minimal_multivertex.py  test_minimal_resolution.py  test_multivertex_engine.py  test_nakayama_automorphism.py  test_periodic_resolution.py  test_qpa_reference_validation.py  test_resolution_contract.py  test_resolution_protocol.py  test_scan2_builders.py  test_theoremB_convention.py  test_theoremB_multivertex.py  test_truncated_resolution.py  test_tt_calculus.py  test_twisted_bimodule.py
tests/families/: test_acceptance.py  test_basic.py  test_discover.py  test_exterior.py  test_family_citations.py  test_freshness_gate.py  test_incidence.py  test_nakayama.py  test_path_algebra.py  test_preprojective.py  test_quantum.py  test_rad_square_zero.py  test_tensor.py  test_trivial_extension.py  test_truncated.py  test_zoo.py
tests/fields/: test_complexfield.py  test_finitefield.py  test_gaussian.py  test_linalg.py  test_primefield.py  test_rationals.py
tests/groebner/: test_acceptance.py  test_certificate.py  test_complete.py  test_lower.py  test_order.py  test_overlap.py  test_properties.py  test_reduction.py  test_system.py
tests/gui/: conftest.py  test_build_hook.py  test_eta.py  test_interface_freshness.py  test_runner_artifacts.py  test_runner_build.py  test_runner_invariants.py
tests/hochschild/: test_bar_cohomology.py  test_bar_homology.py
tests/invariants/: test_cartan.py  test_coxeter_nonunimodular.py  test_engine_backed.py  test_scalar.py  test_spectral.py  test_sweep.py
tests/modules/: test_acceptance_plan05.py  test_builders.py  test_ext.py  test_hom.py  test_interface_gate.py  test_module.py  test_radtopsoc.py  test_resolution.py
tests/qpa/: test_crosscheck.py  test_gap_fixture.py  test_scripts.py  test_session_guard.py
tests/release/: test_acceptance.py  test_build.py  test_community.py  test_docs.py  test_freshness.py  test_markers.py  test_packaging_metadata.py  test_paper.py  test_readme.py  test_workflows.py
tests/resolutions_cs/: conftest.py  test_aarith.py  test_acceptance.py  test_ambiguities.py  test_battery_bank_oracle.py  test_battery_bar.py  test_battery_bardzell.py  test_battery_literature.py  test_battery_straddle.py  test_canonicalization.py  test_comparison.py  test_differential.py  test_dispatch.py  test_homology.py  test_interface_gate.py  test_leading.py  (+2 more)
(+126 files in other folders)
