[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "quiverlab"
version = "0.1.0.dev0"
description = "Quivers with relations and Hochschild theory, exactly, for algebraists"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Marco Armenta", email = "drmarcoarmenta@gmail.com" }]
dependencies = ["numpy>=1.21", "sympy>=1.12", "matplotlib>=3.7"]

[project.optional-dependencies]
dev = ["pytest>=8"]
fast = ["numba>=0.64"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"quiverlab.citations" = ["references.bib"]
"quiverlab.families" = ["zoo_catalog.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "fast: quick tests; run on every CI matrix cell (OS x Python)",
    "deep: heavy engine/resolution/Chouhy-Solotar suites; one Linux cell (~19 min)",
    "qpa: requires the [qpa] extra (passagemath-gap + QPA); the CI QPA job only",
    "slow: individually long tests; opt-in via -m slow",
]
